--- a/ros/split/omnivelma/package.xml
+++ b/ros/split/omnivelma/package.xml
@@ -11,10 +11,12 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>gazebo_ros</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   
   <run_depend>gazebo_ros</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <export>
 	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
