ZROSyfikuj także Pseudovelmę

--- a/ros/src/pseudovelma/model.config
+++ b/ros/src/pseudovelma/model.config
@@ -6,7 +6,7 @@
 
 	<author>
 		<name>Antyradek</name>
-		<email>antyradek@gmail.com</email>
+		<email>antyradek@protonmail.com</email>
 	</author>
 
 	<description>
