--- a/docs/makefile
+++ b/docs/makefile
@@ -3,4 +3,4 @@ FILES= title.tex abstract.tex about.tex model.tex bibliography.tex
 all:main.pdf
 	
 main.pdf: $(FILES)
-	pdflatex -output-format pdf main.tex
+	pdflatex -halt-on-error -output-format pdf main.tex
