--- a/ros/src/omnivelma/package.xml
+++ b/ros/src/omnivelma/package.xml
@@ -14,11 +14,13 @@
 	<build_depend>std_msgs</build_depend>
 	<build_depend>message_generation</build_depend>
     <build_depend>roscpp</build_depend>
+	<build_depend>geometry_msgs</build_depend>
 	
     <run_depend>gazebo_ros</run_depend>
 	<run_depend>std_msgs</run_depend>
     <run_depend>roscpp</run_depend>
 	<run_depend>message_runtime</run_depend>
+	<run_depend>geometry_msgs</run_depend>
 	
 	<export>
 		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
