--- a/ros/src/flooria/CMakeLists.txt
+++ b/ros/src/flooria/CMakeLists.txt
@@ -32,8 +32,9 @@ find_package(roscpp REQUIRED)
 find_package(std_msgs REQUIRED)
 include_directories(${roscpp_INCLUDE_DIRS})
 include_directories(${std_msgs_INCLUDE_DIRS})
+include_directories(${catkin_INCLUDE_DIRS})
 
-set(CMAKE_C_FLAGS   "-Wall")
+set(CMAKE_CXX_FLAGS   "-Wall")
 link_directories(${GAZEBO_LIBRARY_DIRS})
 include_directories(${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
