--- a/ros/src/pseudovelma/CMakeLists.txt
+++ b/ros/src/pseudovelma/CMakeLists.txt
@@ -5,33 +5,24 @@ find_package(catkin REQUIRED COMPONENTS
   gazebo_ros
   roscpp
   std_msgs
-  message_generation
+  omnivelma
 )
-
-add_message_files(
-	FILES
-	Vels.msg
-)
-
-generate_messages(
-	DEPENDENCIES
-	std_msgs
-)
-
 
 catkin_package(
 	CATKIN_DEPENDS 
 	std_msgs
-	message_runtime
 	gazebo_ros
 	roscpp 
+	omnivelma
 )
 
 find_package(gazebo REQUIRED)
 find_package(roscpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(omnivelma REQUIRED)
 include_directories(${roscpp_INCLUDE_DIRS})
 include_directories(${std_msgs_INCLUDE_DIRS})
+include_directories(${catkin_INCLUDE_DIRS})
 
 set(CMAKE_CXX_FLAGS   "-Wall")
 link_directories(${GAZEBO_LIBRARY_DIRS})
@@ -40,4 +31,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
 add_library(${PROJECT_NAME} src/pseudovelma.cpp)
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
-add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
