--- a/ros/src/pseudovelma/package.xml
+++ b/ros/src/pseudovelma/package.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0"?>
-<package>
+<package format="2">
 	<name>pseudovelma</name>
 	<version>1.0.0</version>
 	<description>Kinematyczny model postawy jezdnej dla robota Velma</description>
@@ -10,17 +9,14 @@
 	
 	<buildtool_depend>catkin</buildtool_depend>
 	
-	<build_depend>gazebo_ros</build_depend>
-	<build_depend>std_msgs</build_depend>
-	<build_depend>message_generation</build_depend>
-    <build_depend>roscpp</build_depend>
-	<build_depend>omnivelma</build_depend>
+	<depend>gazebo_ros</depend>
+	<depend>std_msgs</depend>
+    <depend>roscpp</depend>
+	<depend>omnivelma</depend>
 	
-    <run_depend>gazebo_ros</run_depend>
-	<run_depend>std_msgs</run_depend>
-    <run_depend>roscpp</run_depend>
-	<run_depend>message_runtime</run_depend>
-	<run_depend>omnivelma</run_depend>
+	<build_depend>message_generation</build_depend>
+	
+	<exec_depend>message_runtime</exec_depend>
 	
 	<export>
 		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
