--- a/ros/src/transmutator/package.xml
+++ b/ros/src/transmutator/package.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0"?>
-<package>
+<package format="2">
 	<name>transmutator</name>
 	<version>1.0.0</version>
 	<description>Translacja docelowej prędkości i obrotu na prędkości kół</description>
@@ -10,14 +9,8 @@
 	
 	<buildtool_depend>catkin</buildtool_depend>
 	
-	<build_depend>std_msgs</build_depend>
-    <build_depend>roscpp</build_depend>
-	<build_depend>geometry_msgs</build_depend>
-	<build_depend>omnivelma</build_depend>
-	
-	<run_depend>std_msgs</run_depend>
-    <run_depend>roscpp</run_depend>
-	<run_depend>geometry_msgs</run_depend>
-	<run_depend>omnivelma</run_depend>
-	
+	<depend>std_msgs</depend>
+    <depend>roscpp</depend>
+	<depend>geometry_msgs</depend>
+	<depend>omnivelma</depend>
 </package>
