--- a/ros/src/velmaverse/package.xml
+++ b/ros/src/velmaverse/package.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0"?>
-<package>
+<package format="2">
 	<name>velmaverse</name>
 	<version>1.0.0</version>
 	<description>Model postawy jezdnej dla robota Velma</description>
@@ -10,9 +9,7 @@
 	
 	<buildtool_depend>catkin</buildtool_depend>
 	
-	<build_depend>gazebo_ros</build_depend>
-	
-	<run_depend>gazebo_ros</run_depend>
+	<depend>gazebo_ros</depend>
 	
 	<export>
 		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
