Przestaw generację wiadomości do osobnego pakietu
Wszystkie wspólne wiadomości i wywołania są teraz z omnivelma_msgs.

--- a/ros/src/flooria/CMakeLists.txt
+++ b/ros/src/flooria/CMakeLists.txt
@@ -3,36 +3,20 @@ project(flooria)
 
 find_package(catkin REQUIRED COMPONENTS
   gazebo_ros
-  message_generation
   roscpp
-  std_msgs
+  omnivelma_msgs
 )
-
-add_service_files(
-	FILES
-	SetFriction.srv
-)
-
-generate_messages(
-	DEPENDENCIES
-	std_msgs
-)
-
 
 catkin_package(
 	CATKIN_DEPENDS 
-	std_msgs
-	message_runtime
+	omnivelma_msgs
 	gazebo_ros
 	roscpp 
 )
 
 find_package(gazebo REQUIRED)
 find_package(roscpp REQUIRED)
-find_package(std_msgs REQUIRED)
-include_directories(${roscpp_INCLUDE_DIRS})
-include_directories(${std_msgs_INCLUDE_DIRS})
-include_directories(${catkin_INCLUDE_DIRS})
+find_package(omnivelma_msgs REQUIRED)
 
 set(CMAKE_CXX_FLAGS   "-Wall --std=c++14")
 link_directories(${GAZEBO_LIBRARY_DIRS})
@@ -40,6 +24,6 @@ include_directories(${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
 add_library(${PROJECT_NAME} src/flooria.cpp)
-add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_generate_messages_cpp)
+add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
 
