--- a/ros/src/ocznica/package.xml
+++ b/ros/src/ocznica/package.xml
@@ -10,12 +10,8 @@
 	<buildtool_depend>catkin</buildtool_depend>
 	
 	<depend>gazebo_ros</depend>
-	<depend>std_msgs</depend>
+	<depend>omnivelma_msgs</depend>
 	<depend>roscpp</depend>
-	
-	<build_depend>message_generation</build_depend>
-    
-	<exec_depend>message_runtime</exec_depend>
 	
 	<export>
 		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
