--- a/ros/src/omnivelma/package.xml
+++ b/ros/src/omnivelma/package.xml
@@ -13,10 +13,7 @@
 	<depend>std_msgs</depend>
     <depend>roscpp</depend>
 	<depend>geometry_msgs</depend>
-		
-	<build_depend>message_generation</build_depend>
-
-	<exec_depend>message_runtime</exec_depend>
+	<depend>omnivelma_msgs</depend>
 	
 	<export>
 		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
