Pierwsza prezentacja PO

--- a/docs/graphics/makefile
+++ b/docs/graphics/makefile
@@ -1,7 +1,7 @@
 INKSCAPE=inkscape
-PDFS=base_dims friction base_vects mecanum_dirs
+PDFS=base_dims.pdf friction.pdf base_vects.pdf mecanum_dirs.pdf vectors.pdf
 
 all: $(PDFS)
 
-$(PDFS):
-	$(INKSCAPE) -A $@.pdf $@.svg
+%.pdf: %.svg
+	$(INKSCAPE) -A $@ $<
