--- a/docs/graphics/makefile
+++ b/docs/graphics/makefile
@@ -1,5 +1,5 @@
 INKSCAPE=inkscape
-PDFS=base_dims.pdf friction.pdf base_vects.pdf mecanum_dirs.pdf vectors.pdf
+PDFS=base_dims.pdf friction.pdf base_vects.pdf mecanum_dirs.pdf vectors.pdf weiti_logo.pdf comm.pdf
 
 all: $(PDFS)
 
