--- a/ros/src/monokl/model.config
+++ b/ros/src/monokl/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <model>
-	<name>omnivelma</name>
+	<name>monokl</name>
 	<version>1.0.0</version>
 	<sdf version="1.6">model.sdf</sdf>
 
@@ -10,6 +10,6 @@
 	</author>
 
 	<description>
-	Model podstawy jezdnej
+	Model czujnika laserowego SICK LMS100-1000
 	</description>
 </model>
