--- a/ros/src/monokl/package.xml
+++ b/ros/src/monokl/package.xml
@@ -11,6 +11,7 @@
 	
 	<depend>gazebo_ros</depend>
 	<depend>std_msgs</depend>
+	<depend>sensor_msgs</depend>
     <depend>roscpp</depend>
 	
 	<export>
