Skończ tworzyć czujnik laserowy.
Nadaje ramki i doskonale nadaje się do wizualizacji w RVizie.

--- a/ros/src/omnivelma/CMakeLists.txt
+++ b/ros/src/omnivelma/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   geometry_msgs
   omnivelma_msgs
+  tf2_ros
 )
 
 catkin_package(
@@ -14,12 +15,14 @@ catkin_package(
 	gazebo_ros
 	roscpp 
 	omnivelma_msgs
+	tf2_ros
 )
 
 find_package(gazebo REQUIRED)
 find_package(roscpp REQUIRED)
 find_package(omnivelma_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 set(CMAKE_CXX_FLAGS   "-Wall --std=c++14")
 link_directories(${GAZEBO_LIBRARY_DIRS})
@@ -29,4 +32,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 add_library(${PROJECT_NAME} src/omnivelma.cpp)
 add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
+
+add_library(monokl_chain src/monokl_chain.cpp)
+add_dependencies(monokl_chain ${catkin_EXPORTED_TARGETS})
+target_link_libraries(monokl_chain ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
 
