--- a/ros/src/omnivelma/package.xml
+++ b/ros/src/omnivelma/package.xml
@@ -14,6 +14,7 @@
     <depend>roscpp</depend>
 	<depend>geometry_msgs</depend>
 	<depend>omnivelma_msgs</depend>
+	<depend>tf2_ros</depend>
 	
 	<export>
 		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
