Dodaj zdjęcie sensora

--- a/docs/makefile
+++ b/docs/makefile
@@ -1,6 +1,6 @@
-FILES= main.tex title.tex abstract.tex about.tex model.tex bibliography.tex
+FILES= main.tex title.tex abstract.tex about.tex model.tex bibliography.tex sensor.tex
 
 all:main.pdf
-	
+
 main.pdf: $(FILES)
 	pdflatex -halt-on-error -output-format pdf main.tex
