--- a/ros/src/pseudovelma/package.xml
+++ b/ros/src/pseudovelma/package.xml
@@ -13,6 +13,7 @@
 	<depend>geometry_msgs</depend>
     <depend>roscpp</depend>
 	<depend>omnivelma_msgs</depend>
+	<depend>nav_msgs</depend>
 	
 	<export>
 		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
