--- a/docs/makefile
+++ b/docs/makefile
@@ -3,4 +3,4 @@ FILES= main.tex macros.tex title.tex abstract.tex about.tex tools.tex robot.tex 
 all:main.pdf
 
 main.pdf: $(FILES)
-	pdflatex -halt-on-error -output-format pdf main.tex
+	pdflatex -shell-escape -halt-on-error -output-format pdf main.tex
