--- a/docs/graphics/makefile
+++ b/docs/graphics/makefile
@@ -1,5 +1,5 @@
 INKSCAPE=inkscape
-PDFS=base_dims.pdf base_front.pdf base_side.pdf friction.pdf base_vects.pdf mecanum_dirs.pdf mecanum_dirs_vect.pdf vectors.pdf weiti_logo.pdf comm.pdf gramofon.pdf
+PDFS=base_dims.pdf base_front.pdf base_side.pdf friction.pdf base_vects.pdf mecanum_dirs.pdf mecanum_dirs_vect.pdf vectors.pdf weiti_logo.pdf comm.pdf gramofon.pdf bases.pdf
 
 all: $(PDFS)
 
